fixed some spacing issues in the text input area

--- a/css/style.css
+++ b/css/style.css
@@ -180,11 +180,21 @@ h4.pill {
 	margin: 5px;
 }
 .slim-bottom {
-	margin-bottom: 0;
-	padding-bottom: 0;
+	margin-bottom: .3em;
+	padding-bottom: .3em;
 }
 .slim-top {
 	margin-top: .3em;
+	padding-top: .3em;
+}
+
+.trim-bottom {
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
+.trim-top {
+	margin-top: 0;
+	padding-top: 0;
 }
 
 .v-align-middle {
